tdf#121723 vcl: leave popup mode on focus loss of toplevel windows

This way it can't happen that we open a menu or context menu, the user
switches away (loosing focus) and a leftover floating window is still
there.

Handle this at the same place where we stop blinking the cursor on focus
loss.

Reviewed-on: https://gerrit.libreoffice.org/64053
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins
(cherry picked from commit f21d2b48bd68424a96aa6cd5572e368208378291)

Change-Id: I4321e8e3fa1d3f8976c0a1fa29c6a182972023bf